--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
 :root {
   --clr-accent-400: hsl(12, 88%, 59%);
-  --clr-accent-100: hsl(13, 100%, 96%);
+  --clr-accent-100: #f8f8f8;
   --clr-primary-400: #d3d3d3;
-  --clr-neutral-100: rgb(149, 149, 149);
+  --clr-neutral-100: #272a31;
+  --cls-neutral-200: #272a31;
   --clr-neutral-900: hsl(0 0% 0%);
   --ff-primary: "Be Vietnam Pro", sans-serif;
   --ff-body: var(--ff-primary);
@@ -258,7 +259,7 @@ li a {
 }
 
 #hero-container {
-  height: 100vh;
+  height: 87vh;
   display: flex;
   align-items: center;
   background-image: url(img/main_big-bg.png);
@@ -266,9 +267,8 @@ li a {
 }
 
 .hero-headline-title {
-  line-height: 3.5rem;
-  padding-top: 15px;
-  font-size: 50px;
+  margin-top: 25px;
+  font-size: 24px;
   font-weight: 700;
   font-family: 'Inter', sans-serif;
 }
@@ -281,6 +281,22 @@ li a {
   padding: 0.5rem;
   margin-top: 1rem;
   margin-bottom: 1rem;
+}
+
+.blog-dates1 {
+  color: #575757;
+  line-height: 3.5rem;
+  padding-top: 15px;
+  font-size: 40px;
+  font-weight: 700;
+  font-family: 'Inter', sans-serif;
+}
+
+.blog-dates2 {
+  color: #575757;
+  font-size: 20px;
+  font-weight: 700;
+  font-family: 'Inter', sans-serif;
 }
 
 .title {
@@ -320,15 +336,15 @@ li a {
 }
 
 .title-indicator {
-  width: 50px;
+  width: 20px;
   height: 16px;
-  border-bottom: 2px solid rgb(239, 81, 60);
+  border-bottom: 1px solid #d3d3d3;
   margin-bottom: 10px;
   margin-top: 0;
 }
 
 .tech-topics-card {
-  background-color: rgb(47, 49, 55);
+  background-color: rgba(255, 255, 255, 0.1);
   margin: 0.3rem;
   padding: 1rem;
   display: flex;
@@ -343,6 +359,7 @@ li a {
 @media (min-width: 769px) {
   .tech-topics-card {
     flex-direction: column;
+    border: 2px solid transparent;
   }
 }
 
@@ -396,6 +413,10 @@ li a {
   }
 }
 
+.contributors {
+  background-color: #f8f8f8;
+}
+
 .contributors-container {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(380px, 1fr));
@@ -406,6 +427,16 @@ li a {
   padding: 1rem;
   display: flex;
   gap: 20px;
+}
+
+.card-italic {
+  font-style: italic;
+  font-size: 15px;
+}
+
+.card-description {
+  font-size: 14px;
+  font-weight: 600;
 }
 
 #main-sponsors {
@@ -437,7 +468,16 @@ footer {
 .footer-container {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
+}
+
+.newslogo {
+  margin-right: 20px;
+}
+
+.lorem {
+  display: none;
+  margin-top: 5px;
 }
 
 .about {
@@ -513,15 +553,37 @@ footer {
 .about-text {
   background-color: rgb(255, 255, 255);
   padding: 1rem;
-  margin: 2rem;
+  margin: 0.5rem;
   line-height: 1.5rem;
 }
 
 #collaborations {
-  height: 80vh;
+  height: 53vh;
+  border-bottom: 1px solid #dfdfdf;
+  border-bottom-width: 1px;
+  border-bottom-style: solid;
+  border-bottom-color: rgb(223, 223, 223);
 }
 
 .divnewsaboutlogo {
+  border: 1px solid #dfdfdf;
+  border-top-color: rgb(223, 223, 223);
+  border-top-style: solid;
+  border-top-width: 1px;
+  border-right-color: rgb(223, 223, 223);
+  border-right-style: solid;
+  border-right-width: 1px;
+  border-bottom-color: rgb(223, 223, 223);
+  border-bottom-style: solid;
+  border-bottom-width: 1px;
+  border-left-color: rgb(223, 223, 223);
+  border-left-style: solid;
+  border-left-width: 1px;
+  border-image-source: initial;
+  border-image-slice: initial;
+  border-image-width: initial;
+  border-image-outset: initial;
+  border-image-repeat: initial;
   max-width: 100%;
   display: block;
   margin: auto;
@@ -536,6 +598,11 @@ footer {
   position: relative;
 }
 
+.past-collab-section:hover {
+  transition: 0.5s ease;
+  color: #008cba;
+}
+
 .w-text {
   position: absolute;
   color: aliceblue;
@@ -545,10 +612,12 @@ footer {
   max-width: 100%;
   display: block;
   margin: auto;
-  transition: all 0.2s ease-in-out;
+
+  /* transition: all 0.2s ease-in-out; */
 }
 
 .collabimage:hover {
+  color: hsl(12, 88%, 59%);
   transform: scale(1.01);
 }
 
@@ -569,11 +638,47 @@ footer {
     display: none;
   }
 
+  .about-text {
+    background-color: rgb(255, 255, 255);
+    padding: 1rem;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+    margin-left: 10rem;
+    margin-right: 10rem;
+    line-height: 1.5rem;
+  }
+
+  .hero-headline-title {
+    line-height: 3.5rem;
+    font-size: 60px;
+    font-weight: 900;
+    font-family: 'Inter', sans-serif;
+  }
+
+  #collaborations {
+    height: 48vh;
+    border-bottom: 1px solid #dfdfdf;
+    border-bottom-width: 1px;
+    border-bottom-style: solid;
+    border-bottom-color: rgb(223, 223, 223);
+  }
+
   .about-footer-container {
     background-color: rgb(46, 46, 46);
     padding-top: 5%;
     padding-bottom: 5%;
     color: white;
+  }
+
+  footer {
+    background-color: rgb(242, 242, 242);
+    padding-top: 5%;
+    padding-bottom: 5%;
+  }
+
+  .lorem {
+    display: contents;
+    margin-top: 10px;
   }
 }
 
